# rvc-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DONE.md  INDEX.md  IN_PROGRESS.md  README.md  TODO.md  generate_index.py
configs/: config.json
docs/: PYTORCH_INTEGRATION.md  frontend-backend-api.md
rvc-core/: .gitignore  Cargo.toml
rvc-core/examples/: demo.rs  load_real_models.rs  model_inspector.rs  tch_demo.rs
rvc-core/src/: audio.rs  audio_stream.rs  config.rs  error.rs  events.rs  f0.rs  gui.rs  lib.rs  models.rs  noise_suppression.rs  pytorch_loader.rs  rtrvc.rs  rvc_model.rs  rvc_processor.rs  sd.rs  tensor.rs  utils.rs  vector_search.rs  world.rs  world_f0.rs
rvc-ui/: README.md  package.json
rvc-ui/src/: App.vue
rvc-ui/src-tauri/: Cargo.toml  tauri.conf.json
rvc-ui/src-tauri/src/: lib.rs  main.rs
