[package]
name = "rvc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# 深度学习框架 - 使用 download-libtorch 特性自动配置
tch = { version = "0.16", features = ["download-libtorch"] }
# 音频处理
hound = "3.5"
dasp = "0.11"
# 并发和异步
tokio = { version = "1.0", features = ["full"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 数学和科学计算
ndarray = "0.15"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 配置管理
config = "0.13"
# 日志
log = "0.4"
env_logger = "0.10"
# 实用工具
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
