[package]
name = "rvc-core"
version = "0.4.0"
edition = "2021"

[[example]]
name = "event_system"
path = "../examples/event_system.rs"

[dependencies]
# 深度学习框架 - 使用 download-libtorch 特性自动配置
tch = { version = "0.16", features = ["download-libtorch"] }
# 音频处理
hound = "3.5"
dasp = "0.11"
cpal = "0.15"
rubato = "0.15"
apodize = "1.0"
realfft = "3.3"
# 并发和异步
tokio = { version = "1.0", features = ["full"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 数学和科学计算
ndarray = "0.15"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 配置管理
config = "0.13"
# 日志
log = "0.4"
env_logger = "0.10"
# 实用工具
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.0"
# 事件系统
tokio-util = "0.7"
futures = "0.3"
crossbeam-channel = "0.5"
# 模型加载相关
byteorder = "1.5"
memmap2 = "0.9"
# Python 互操作 (用于加载 PyTorch 检查点)
pyo3 = { version = "0.20", features = ["auto-initialize"] }
# 文件系统操作
walkdir = "2.4"
# 信号处理
rustfft = "6.2"
# 数值计算
nalgebra = "0.32"
# 简单数学计算
libm = "0.2"
# 随机数生成
rand = "0.8"
# Python 用到的库
rsworld = "0.1.0"
faiss = "0.12.1"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
